ignacioluz58@gmail.com

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,7 +16,7 @@
     <!--ESPACIO PUBLICITARIO-->
     <!-- Publicidad agrgados en columnas de 2,3 ,2 3,2 -->
     <div class="container-fluid" style="background-color:grey; color: white;">
-        <div class="row">
+        <div class="row pt-2 pb-2">
             <div class="col-sm-2">
                 <img src="../../assets/img/publicitario/camion.png" alt="Camion" style="width:70px;">
                 ENVIOS SEGUROS
@@ -40,72 +40,72 @@
         </div>
     </div>
     <br>
-    <div class="footer">
+    <div class="footer container-fluid">
     <!--Informacion pie-->
-    <div class="row" style="font-family: 'Arial'; font-size: 12px;">
-        <!-- Columna de 3 con datos -->
-        <div class="col-sm-3">
-            <div class="text-left pl-5">
-                <h5>CONTACTO</h5>
-                <img src="../../assets/img/contacto/dir.png" style="width:30px;">DIRECCIÓN
-                <p>Av. Ing. Carlos Rojas Gutiérrez 2120, Fracc. Valle De La Herradura, 61100 Cd Hidalgo, Mich.</p>
-                <img src="../../assets/img/contacto/correo.png" style="width:30px;">EMAIL
-                <p></p>
-                <p>leoncapri28@gmail.com</p>
-                <p>elico1904@gmail.com</p>
-                <img src="../../assets/img/contacto/tele.png" style="width:25px;">TELEFONO
-                <p></p>
-                <p>715-128-26-55  ó</p>
-                <p>554-781-68-81</p>
-                <img src="../../assets/img/contacto/cell.png" style="width:25px;">WHATSAPP
-                <p></p>
-                <p>715-128-26-55  ó</p>
-                <p>554-781-68-81</p>
+        <div class="row" style="font-family: 'Arial'; font-size: 12px;">
+            <!-- Columna de 3 con datos -->
+            <div class="col-sm-3">
+                <div class="text-left pl-5">
+                    <h5>CONTACTO</h5>
+                    <img src="../../assets/img/contacto/dir.png" style="width:30px;">DIRECCIÓN
+                    <p>Av. Ing. Carlos Rojas Gutiérrez 2120, Fracc. Valle De La Herradura, 61100 Cd Hidalgo, Mich.</p>
+                    <img src="../../assets/img/contacto/correo.png" style="width:30px;">EMAIL
+                    <p></p>
+                    <p>leoncapri28@gmail.com</p>
+                    <p>elico1904@gmail.com</p>
+                    <img src="../../assets/img/contacto/tele.png" style="width:25px;">TELEFONO
+                    <p></p>
+                    <p>715-128-26-55  ó</p>
+                    <p>554-781-68-81</p>
+                    <img src="../../assets/img/contacto/cell.png" style="width:25px;">WHATSAPP
+                    <p></p>
+                    <p>715-128-26-55  ó</p>
+                    <p>554-781-68-81</p>
+                </div>
+            </div>
+            <div class="col-sm-1"></div>
+            <!-- Columna de 3 de mas informacion -->
+            <div class="col-sm-3">
+                <h5><a href="acerca.html">TECNOJAGUARS-PC</a></h5>
+                <br>
+                <p><a href="acerca.html#acerca">SOBRE NOSOTROS</a></p>
+                <br>
+                <p><a href="acerca.html#tienda">NUESTRA TIENDA</a></p>
+                <br>          
+                <br>
+            </div>
+            <!-- Columna de 3 de mas informacion -->
+            <div class="col-sm-3">
+                <h5><a href="terminos.html">INFORMACION</a></h5>
+                <br>
+                <p><a href="terminos.html">TERMINOS Y CONDICIONES</a></p>
+                <br>
+                <p><a href="terminos.html#politica">POLÍTICA DE REEMBOLSO Y GARANTÍA</a></p>
+                <br>
+                <p><a href="terminos.html#privacidad">PRIVACIDAD</a></p>
+                <br>
+            </div>
+    <!--Redes sociales-->
+            <div class="col-sm-2">
+                <h5>SIGUENOS EN REDES</h5>
+                <a href="https://www.facebook.com/" target="_blank">
+                    <img src="../../assets/img/redes/faceo.png" class="mt-3 mr-1" alt="facebook" style="width:30px;">Facebook
+                </a>
+                <br>
+                <a href="https://www.instagram.com/" target="_blank">
+                    <img src="../../assets/img/redes/intso.png" class="mt-3 mr-1" alt="instagram" style="width:30px;">Instagram
+                </a>
+                <br>
+                <a href="https://twitter.com/" target="_blank">
+                    <img src="../../assets/img/redes/birdo.png" class="mt-3 mr-1" alt="twitter" style="width:30px;">Twitter
+                </a>
+                <br>
+                <a href="https://goo.gl/maps/zF1VtvnQyoTVKoAH8" target="_blank">
+                    <img src="../../assets/img/redes/mapso.png" class="mt-3 mr-1" alt="google" style="width:37px;">Maps
+                </a>
             </div>
         </div>
-        <div class="col-sm-1"></div>
-        <!-- Columna de 3 de mas informacion -->
-        <div class="col-sm-3">
-            <h5><a href="acerca.html">TECNOJAGUARS-PC</a></h5>
-            <br>
-            <p><a href="acerca.html#acerca">SOBRE NOSOTROS</a></p>
-            <br>
-            <p><a href="acerca.html#tienda">NUESTRA TIENDA</a></p>
-            <br>          
-            <br>
-        </div>
-        <!-- Columna de 3 de mas informacion -->
-        <div class="col-sm-3">
-            <h5><a href="terminos.html">INFORMACION</a></h5>
-            <br>
-            <p><a href="terminos.html">TERMINOS Y CONDICIONES</a></p>
-            <br>
-            <p><a href="terminos.html#politica">POLÍTICA DE REEMBOLSO Y GARANTÍA</a></p>
-            <br>
-            <p><a href="terminos.html#privacidad">PRIVACIDAD</a></p>
-            <br>
-        </div>
-<!--Redes sociales-->
-<div class="col-sm-2">
-    <h5>SIGUENOS EN REDES</h5>
-    <a href="https://www.facebook.com/" target="_blank">
-        <img src="../../assets/img/redes/faceo.png" alt="facebook" style="width:30px;">Facebook
-    </a>
-    <br>
-    <a href="https://www.instagram.com/" target="_blank">
-        <img src="../../assets/img/redes/intso.png" alt="instagram" style="width:30px;">Instagram
-    </a>
-    <br>
-    <a href="https://twitter.com/" target="_blank">
-        <img src="../../assets/img/redes/birdo.png" alt="twitter" style="width:30px;">Twitter
-    </a>
-    <br>
-    <a href="https://goo.gl/maps/zF1VtvnQyoTVKoAH8" target="_blank">
-        <img src="../../assets/img/redes/mapso.png" alt="google" style="width:37px;">Maps
-    </a>
-</div>
     </div>
-</div>
     <br>
     <!-- container-fluid de formas de pago  -->
     <h5 style="text-align: center;">METODOS DE PAGO</h5>
