--- a/src/app/usuarios/usuarios.component.html
+++ b/src/app/usuarios/usuarios.component.html
@@ -4,7 +4,7 @@
         <div class="col-sm-8" ></div>
         <div class="col-sm-4">
             <form class="form-inline mt-3">
-                <input class="form-control" type="text" name="buscar" placeholder="Buscar Usuario" (keyup)="buscarUsuarios()" [(ngModel)]="buscar">
+                <input class="form-control" type="text" name="buscar" placeholder="Usuario/Nombre" (keyup)="buscarUsuarios()" [(ngModel)]="buscar">
                 
                 <button class="btn btn-info ml-1" (click)="buscarUsuarios()"><i class="fa fa-search mr-1"></i>Buscar</button>
             </form>
