--- a/src/app/carrito/carrito.component.html
+++ b/src/app/carrito/carrito.component.html
@@ -5,7 +5,7 @@
         <div class="row">
             
             <div class="col">
-                <table class="table table-hover table-dark table-sm table-striped">
+                <table class="table table-hover table-dark table-sm table-striped border shadow mt-3 mb-5 p-4">
                     <thead>
                         <tr>
                             <th>Folio</th>
